--- a/app.html
+++ b/app.html
@@ -8,9 +8,21 @@
     <script src="jogo.js"></script>
 </head>
 <body onresize="ajustaTamanhoPalcoJogo"> <!--AJUSTA TAMANHO DO PALCO-->
+
+    <div class="painel">
+        <div class="vidas">
+            <img id="v1" src="imagens/coracao_cheio.png"/>
+            <img id="v2" src="imagens/coracao_cheio.png"/>
+            <img id="v3" src="imagens/coracao_cheio.png"/>
+        </div>
+
+        <div class="cronometro">Tempo restante: ?</div>       
+    </div>
     
     <script>
-        posicaoRandomica()
+        setInterval(function(){
+            posicaoRandomica()
+        }, 2000)
     </script>
     
 </body>
