--- a/app.html
+++ b/app.html
@@ -24,7 +24,7 @@
 
         var cria_mosquito = setInterval(function(){
             posicaoRandomica()
-        }, 2000)
+        }, criaMosquitoTempo)
     </script>
     
 </body>
